# zrb

./: .coveragerc  .dockerignore  .flake8  .gitignore  :w  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  PLAN-POST.md  PLAN.md  PROMPT_REFACTOR_PLAN.md  README.md  ZRB.md  ZRB_README.md  claude-discrepancy-analysis.md  completion.sh  cov.json  coverage.json  error.txt  go.mod  install.ps1  install.sh  main.go  main.py  monorepo.zrb.json  output.txt  package-lock.json  plan.md  playground-create.sh  playground-init.sh  playground-start.sh  playground-test-fastapp.sh  playground-test-install-symlink.sh  pollux.py  project.sh  prompt-inefficiency-analysis.md  pyproject.bak.toml  pyproject.toml  pyrightconfig.json  (+12 more)
src/zrb/builtin/generator/docker_compose_task/template/src/kebab-zrb-task-name/image/: Dockerfile  pyproject.toml
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/loadtest/: locustfile.py  pyproject.toml  template.env
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/: .gitignore  Dockerfile  config.py  main.py  migrate.py  pyproject.toml  requirements.txt  start.sh
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/component/: app.py  app_lifespan.py  app_state.py  db_connection.py  frontend_index.py  log.py  messagebus.py  rpc.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/component/messagebus/: messagebus.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/component/messagebus/rabbitmq/: admin.py  consumer.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/component/model/: __init__.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/component/rpc/messagebus/: caller.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/component/serializer/: __init__.py  serializer.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/core/: error.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/core/messagebus/: __init__.py  messagebus.py  mock.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/core/messagebus/kafka/: admin.py  consumer.py  publisher.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/core/messagebus/rabbitmq/: admin.py  consumer.py  publisher.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/core/model/: repo_model.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/core/repo/: __init__.py  db_entity_mixin.py  db_repo.py  repo.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/core/rpc/: __init__.py  rpc.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/core/rpc/messagebus/: caller.py  server.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/core/schema/: __init__.py  base_schema.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/core/serializer/: __init__.py  serializer.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/frontend/: package.json
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/frontend/src/routes/: +layout.svelte  +page.svelte
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/helper/: async_task.py  conversion.py  migration.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/integration/: app.py  app_lifespan.py  frontend_index.py  messagebus.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/auth/: api.py  event.py  migrate.py  register_module.py  register_permission.py  rpc.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/auth/component/: __init__.py  access_token_scheme.py  access_token_util.py  authorizer.py  bearer_token_scheme.py  password_hasher.py  refresh_token_util.py  user.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/auth/component/authorizer/: authorizer.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/auth/component/model/: permission_model.py  user_model.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/auth/component/repo/: group_repo.py  permission_repo.py  (+1 more)
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/auth/core/: __init__.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/auth/entity/: table.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/auth/integration/: password_hasher.py  refresh_token_util.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/auth/schema/: group.py  permission.py  request.py  token.py  user.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/log/: api.py  event.py  migrate.py  register_module.py  rpc.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/log/component/: historical_repo_model.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/log/core/: historical_repo_model.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/log/entity/: table.py
src/zrb/builtin/generator/fastapp/template/src/kebab-zrb-app-name/src/module/log/schema/: activity.py
src/zrb/builtin/generator/pip_package/template/src/kebab-zrb-package-name/: README.md  pyproject.toml  requirements.txt
src/zrb/builtin/generator/pip_package/template/src/kebab-zrb-package-name/src/: __init__.py  hello.py
src/zrb/builtin/generator/pip_package/template/src/kebab-zrb-package-name/src/snake_zrb_package_name/: __init__.py
src/zrb/builtin/generator/project/template/: .gitignore  README.md  project.sh  pyproject.toml  template.env
src/zrb/builtin/generator/project/template/.github/workflows/: _zrb.yml  hello.yml
src/zrb/builtin/generator/simple_python_app/template/src/kebab-zrb-app-name/src/: Dockerfile  pyproject.toml  requirements.txt
(+4666 files in other folders)
