[project]
name = "zrb"
version = "2.49.3"
description = "Your Automation Powerhouse"
authors = [{name = "Go Frendi Gunawan", email = "gofrendiasgard@gmail.com"}]
license = "AGPL-3.0-or-later"
readme = "README.pypi.md"
keywords = ["Automation", "Task Runner", "Code Generator", "Monorepo", "Low Code"]
requires-python = ">=3.11.0,<3.15.0"
dependencies = [
    "python-dotenv>=1.1.1,<2.0.0",
    "beautifulsoup4>=4.14.2,<5.0.0",
    "pdfplumber>=0.11.7,<0.12.0",
    "fastapi[standard]>=0.136.3,<0.137.0",
    "jinja2>=3.1.0,<4.0.0",
    # PyJWT and pyjwt normalize to the same distribution; consolidated to the
    # stricter pin so PEP-621 does not see a duplicate dependency.
    # Security fix: GHSA-xgmm-8j9v-c9wx (CVE-2026-48526) - JWT forgery via JWK-as-HMAC-secret confusion.
    "PyJWT>=2.13.0,<3.0.0",
    "ulid-py>=1.1.0,<2.0.0",
    "psutil>=7.0.0,<8.0.0",
    # NOTE: Look at https://github.com/pydantic/pydantic-ai/blob/main/pydantic_ai_slim/pyproject.toml
    # The `mcp` extra pulls `fastmcp-slim[client]`, required by `MCPToolset`.
    # Security fix: GHSA-4xgf-cpjx-pc3j - NestedSecretsSettingsSource follows symlinks outside secrets_dir.
    # pydantic-settings is transitive via pydantic-ai-slim → fastmcp-slim → mcp. Pin >=2.14.2.
    "pydantic-settings>=2.14.2",
    "pydantic-ai-slim[mcp]>=2.2.0,<2.4.0",
    # NOTE: Make sure the following dependencies are not conflicting with pydantic-ai-slim
    "openai>=2.29.0",
    "prompt-toolkit>=3",
    "rich>=13",
    "mcp>1.25.0,<2.0",
    "requests>=2.33.0,<3.0.0",
    "tiktoken>=0.12.0,<0.13.0",
    "markdownify>=1.2.2,<2.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "pyperclip>=1.11.0,<2.0.0",
    # Security fix: CVE-2026-40192 - Decompression bomb via unlimited GZIP read in FITS decoding.
    # Pillow is a transitive dependency via pdfplumber. We pin >=12.2.0 to ensure the patched version is used.
    "Pillow>=12.2.0",
    # Security fix: CVE-2026-4539 - ReDoS vulnerability in AdlLexer (GUID regex).
    # pygments is a transitive dependency via rich and pytest. We pin >=2.20.0.
    "pygments>=2.20.0",
    # Security fix: CVE-2026-39892 - cryptography is a transitive dependency via pdfminer-six
    # (pulled in by pdfplumber) and google-auth. We pin >=46.0.7.
    # Security fix: GHSA-537c-gmf6-5ccf - Out-of-bounds read via statically linked OpenSSL. We pin >=48.0.1.
    "cryptography>=48.0.1",
    # Security fix: CVE-2026-42561 (GHSA-pp6c-gr5w-3c5g) - CPU exhaustion via unlimited multipart
    # header count and size in form-data submissions. python-multipart is transitive via mcp. We pin >=0.0.27.
    # Security fix: GHSA-5rvq-cxj2-64vf (CVE-2026-53539) - quadratic-time DoS via ; separators in url-encoded bodies. We pin >=0.0.30.
    "python-multipart>=0.0.30",
    # Security fix: GHSA-86qp-5c8j-p5mr (CVE-2026-48710) - Missing Host header validation poisons
    # request.url.path, bypassing path-based security checks. starlette is a dependency of fastapi. We pin >=1.0.1.
    # Security fix: GHSA-82w8-qh3p-5jfq (CVE-2026-54283) - request.form() limits silently ignored
    # for application/x-www-form-urlencoded, enabling DoS. We pin >=1.3.1.
    "starlette>=1.3.1",
    # Security fix: CVE-2026-44432 - urllib3 does not strip cookies on HTTP redirect from HTTPS.
    # urllib3 is transitive via requests and boto3. We pin >=2.7.0.
    "urllib3>=2.7.0",
    # Security fix: GHSA-65pc-fj4g-8rjx (CVE-2026-45409) - DoS via crafted input to idna.encode().
    # idna is transitive via requests, httpx, anyio (pydantic-ai). We pin >=3.15.
    "idna>=3.15",
]

[project.urls]
homepage = "https://github.com/state-alchemists/zrb"
repository = "https://github.com/state-alchemists/zrb"
documentation = "https://github.com/state-alchemists/zrb"

[project.optional-dependencies]
# Install all extras:
# - poetry install --all-extras
# - pip install "zrb[rag,playwright,cohere,vertexai,google,anthropic,groq,xai,bedrock,huggingface,voyageai,voice,python]"
# Install a specific extra:
# - poetry install -E voice
# - pip install "zrb[voice]"
python = [
    "black>=26.3.1,<27.0.0",
    "isort>=7.0.0,<8.0.0",
]
#
# NOTE: Make sure these dependencies do not conflict with pydantic-ai-slim. Security
# pins on transitive packages are annotated inline on the dependency that carries them.
rag = ["chromadb>=1.3.5,<2.0.0"]
playwright = ["playwright>=1.56.0,<2.0.0"]
cohere = ["cohere>=5.20.6"]
vertexai = [
    "google-auth>=2.36.0",
    # Security fix: CVE-2026-23491 - DoS via uncontrolled recursion in ASN.1 decoding (via google-auth).
    "pyasn1>=0.6.3",
]
google = ["google-genai>=1.70.0"]
anthropic = ["anthropic>=0.108.0"]
groq = ["groq>=0.25.0"]
xai = [
    "xai-sdk>=1.12.2",
    # Security fix: GHSA-hg6j-4rv6-33pg (CVE-2026-47265) - cross-origin redirect leaks per-request cookies.
    # Security fix: GHSA-xcgm-r5h9-7989 (CVE-2026-54274) - incomplete WebSocket frame payloads bypass memory limits. We pin >=3.14.1.
    "aiohttp>=3.14.1",
]
bedrock = ["boto3>=1.42.63"]
huggingface = ["huggingface-hub[inference]>=1.3.4,<2.0.0"]
voyageai = [
    "voyageai>=0.3.7 ; python_version < '3.14'",
    # Security fix: CVE-2026-34070, CVE-2026-44843 (GHSA-pjwx-r37v-7724) - unsafe deserialization.
    "langchain-core>=1.3.3",
    # Security fix: GHSA-hg6j-4rv6-33pg (CVE-2026-47265) - cross-origin redirect leaks per-request cookies.
    # Security fix: GHSA-xcgm-r5h9-7989 (CVE-2026-54274) - incomplete WebSocket frame payloads bypass memory limits. We pin >=3.14.1.
    "aiohttp>=3.14.1",
    # Security fix: GHSA-fv5p-p927-qmxr - SSRF via redirect bypass in HTMLHeaderTextSplitter.split_text_from_url().
    "langchain-text-splitters>=1.1.2",
    # Security fix: GHSA-3644-q5cj-c5c7 (CVE-2026-45134) - unsafe prompt-manifest deserialization.
    # Security fix: GHSA-f4xh-w4cj-qxq8 - TracingMiddleware arbitrary server-side file read.
    "langsmith>=0.8.18",
]
voice = [
    "vosk>=0.3.44,<0.3.45; sys_platform == 'darwin'",
    "vosk>=0.3.45; sys_platform != 'darwin'",
    "sounddevice>=0.5.1",
    "numpy>=1.26.0",
]

[project.scripts]
zrb = "zrb.__main__:serve_cli"

[tool.poetry]
exclude = [
    "__pycache__",
    "_images",
    ".github",
    ".pytest_cache",
    ".venv",
    ".vscode",
    "dist",
    "docs",
    "htmlcov",
    "playground",
    "test",
    ".coverage",
    ".coveragerc",
    ".cprofile.prof",
    ".cprofile.svg",
    ".env",
    ".flake8",
    ".gitignore",
    ".python-version",
    "install.sh",
    "project.sh",
    "README.md",
    "template.env",
    "zrb_init.py"
]

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
flake8 = "^7.2.0"
# Security fix: CVE-2025-71176 - Local privilege escalation via /tmp/pytest-of-{user} directories.
pytest = ">=9.0.3"
pytest-cov = "^6.1.0"
pytest-asyncio = "^1.3.0"
tomlkit = "^0.13.3"
httpx2 = ">=2.4.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
norecursedirs = "playground examples"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
