[tool.poetry]
name = "kebab-zrb-project-name"
version = "0.0.1"
description = "zrbProjectDescription"
authors = ["zrbProjectAuthorName <zrbProjectAuthorEmail>"]
keywords = []
packages = [
  {include = "kebab-zrb-project-name", from = ".."},
]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
zrb = ">=zrbVersion"

[tool.poetry.dev-dependencies]
flake8 = "~7.0.0"
black = "~24.2.0"
isort = "~5.13.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
